added the cards to the home

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="path/to/dist/percent-circle.css">
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="path/to/dist/percent-circle-directive.js" type="text/javascript"></script>
 </body>
 </html>
